# dispatch

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml  schema-pages.yml
crates/dispatch-channel-protocol/: Cargo.toml
crates/dispatch-channel-protocol/src/: lib.rs
crates/dispatch-cli/: Cargo.toml
crates/dispatch-cli/src/: channel_cmds.rs  conformance.rs  courier_cmds.rs  deployment_cmds.rs  eval.rs  extension_cmds.rs  inspect.rs  main.rs  parcel_ops.rs  project_config.rs  run.rs  runs.rs  secret_cmds.rs  skill_run.rs  state.rs  tool_display.rs
crates/dispatch-cli/tests/: runtime_lifecycle.rs
crates/dispatch-core/: Cargo.toml
crates/dispatch-core/src/: ast.rs  build.rs  catalog.rs  channel_plugin_protocol.rs  channel_plugins.rs  courier.rs  courier_a2a.rs  database_plugins.rs  deployment_plugins.rs  depot.rs  eval.rs  lib.rs  manifest.rs  parse.rs  plugin_protocol.rs  plugins.rs  provider_plugins.rs  secrets.rs  signing.rs  skill.rs  trace.rs  trust.rs  validate.rs
crates/dispatch-core/src/courier/: a2a.rs  builtin_tools.rs  checkpoint_store.rs  host_turn.rs  memory_store.rs  model_backends.rs  model_request.rs  mounts.rs  parcel.rs  plugin_process.rs  session_store.rs  tests.rs  tool_exec.rs  validation.rs  wasm_support.rs
crates/dispatch-core/src/courier/model_backends/: anthropic.rs  claude.rs  codex.rs  gemini.rs  openai.rs  plugin.rs
crates/dispatch-core/src/courier/tests/: a2a.rs  config.rs  docker.rs  model_backends.rs  model_request.rs  mounts.rs  native_chat.rs  native_runtime.rs  parcel.rs  plugin.rs  state.rs  wasm.rs
crates/dispatch-core/src/depot/: http.rs
crates/dispatch-core/tests/: courier_conformance.rs  schema_publication.rs
crates/dispatch-courier-echo/: Cargo.toml
crates/dispatch-courier-echo/src/: main.rs
crates/dispatch-courier-protocol/: Cargo.toml
crates/dispatch-courier-protocol/src/: lib.rs
crates/dispatch-database-protocol/: Cargo.toml
crates/dispatch-database-protocol/src/: lib.rs
crates/dispatch-deployment-protocol/: Cargo.toml
crates/dispatch-deployment-protocol/src/: lib.rs
crates/dispatch-plugin-rpc/: Cargo.toml
crates/dispatch-plugin-rpc/src/: lib.rs
crates/dispatch-process/: Cargo.toml
crates/dispatch-process/src/: lib.rs
crates/dispatch-provider-protocol/: Cargo.toml
crates/dispatch-provider-protocol/src/: lib.rs
crates/dispatch-wasm-abi/: Cargo.toml
crates/dispatch-wasm-abi/src/: lib.rs
crates/dispatch-wasm-abi/wit/: dispatch-courier.wit
crates/dispatch-wasm-guest-reference/: Cargo.toml
crates/dispatch-wasm-guest-reference/src/: bindings.rs  lib.rs
docs/: a2a.md  agentfile.md  chat-provider-plugin-extraction-plan.md  courier-implementers.md  courier-plugin-protocol-v1.md  courier-plugin-protocol-v2.md  courier-plugin-protocol.md  database-plugin-protocol.md  extensions.md  plugin-ecosystem.md  provider-plugin-protocol.md  runtime-and-serve.md  schema-compatibility.md  trust-and-depots.md
examples/: README.md
examples/basic/: AGENTS.md  Agentfile  IDENTITY.md  MEMORY.md  SKILL.md  SOUL.md  TOOLS.md
examples/basic/evals/: smoke.eval
examples/heartbeat-monitor/: AGENTS.md  Agentfile  HEARTBEAT.md  MEMORY.md  TOOLS.md  USER.md
examples/heartbeat-monitor/schemas/: release.json  respond.json
examples/heartbeat-monitor/tools/: release.sh  respond.sh
examples/parcels/basic/: Agentfile  IDENTITY.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md
examples/parcels/basic/evals/: smoke.eval
examples/parcels/codex/: Agentfile  IDENTITY.md  SOUL.md  USER.md
examples/parcels/heartbeat-monitor/: Agentfile  IDENTITY.md  MEMORY.md  SKILL.md  SOUL.md
examples/parcels/heartbeat-monitor/tools/: poll_mentions.sh
examples/parcels/wasm-reference/: Agentfile  SOUL.md  TOOLS.md  USER.md
examples/parcels/wasm-reference/components/: reference-guest.wasm
examples/parcels/wasm-reference/tools/: echo.sh
examples/runtime/: README.md
examples/runtime/telegram-bot/: dispatch.toml  telegram-config.toml
examples/skills/file-analyst/: Agentfile  SOUL.md
examples/skills/file-analyst/evals/: smoke.eval
examples/skills/file-analyst/skills/file-analyst/: SKILL.md  dispatch.toml
examples/skills/file-analyst/skills/file-analyst/schemas/: find_files.json
examples/skills/file-analyst/skills/file-analyst/scripts/: find_files.sh  list_dir.sh  read_file.sh
examples/skills/log-watcher/: Agentfile  HEARTBEAT.md  SOUL.md
examples/skills/log-watcher/evals/: smoke.eval
examples/skills/log-watcher/skills/log-watcher/: SKILL.md  skill.toml
examples/skills/log-watcher/skills/log-watcher/scripts/: line_count.sh  read_log.sh  write_alert.sh
examples/skills/release-notes/: Agentfile  SOUL.md
examples/skills/release-notes/evals/: smoke.eval
examples/skills/release-notes/skills/release-notes/: SKILL.md  dispatch.toml
examples/skills/release-notes/skills/release-notes/scripts/: git_diff_stat.sh  git_log.sh  git_show.sh
examples/wasm-reference/: AGENTS.md  Agentfile  IDENTITY.md  MEMORY.md
examples/wasm-reference/components/: reference-guest.wasm
schemas/: parcel.v1.json
