[workspace]
members = [
    "crates/dispatch-core",
    "crates/dispatch-cli",
    "crates/dispatch-courier-echo",
    "crates/dispatch-wasm-abi",
    "crates/dispatch-wasm-guest-reference",
]
default-members = ["crates/dispatch-cli"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/serenorg/dispatch"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
sha2 = "0.11"
tempfile = "3"
ureq = { version = "3", features = ["json"] }
walkdir = "2"
wasmtime = "43"
wasmtime-wasi = "43"
ring = "0.17"
jsonschema = "0.45"
rusqlite = "0.37"
tar = "0.4"
urlencoding = "2"
toml = "0.9"
serde_yaml = "0.9"
url = "2"
base64 = "0.22"
