[workspace]
members = [
    "crates/dispatch-plugin-rpc",
    "crates/dispatch-channel-protocol",
    "crates/dispatch-process",
    "crates/dispatch-core",
    "crates/dispatch-cli",
    "crates/dispatch-courier-protocol",
    "crates/dispatch-courier-echo",
    "crates/dispatch-wasm-abi",
    "crates/dispatch-wasm-guest-reference",
]
default-members = ["crates/dispatch-cli"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/serenorg/dispatch"
version = "0.3.0"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
sha2 = "0.11"
tempfile = "3"
ureq = { version = "3", features = ["json"] }
walkdir = "2"
wasmtime = "43"
wasmtime-wasi = "43"
ring = "0.17"
jsonschema = "0.45"
rusqlite = { version = "0.37", features = ["bundled"] }
tar = "0.4"
urlencoding = "2"
toml = "0.9"
serde_yaml = "0.9"
url = "2"
base64 = "0.22"
libc = "0.2"
chrono = "0.4"
cron = "0.15"
nix = "0.31"
signal-hook = "0.4"
atomic-write-file = "0.3"
tiny_http = "0.12"
