[package]
name = "dispatch-channel-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared channel plugin wire protocol for Dispatch."
readme = "../../README.md"
keywords = ["agents", "channel", "plugin", "protocol", "dispatch"]
categories = ["development-tools"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
