[package]
name = "dispatch"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for building, verifying, and running Dispatch agent parcels."
readme = "../../README.md"
keywords = ["agents", "cli", "packaging", "dispatch"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
dispatch-core = { path = "../dispatch-core" }
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
jsonschema.workspace = true
libc.workspace = true
chrono.workspace = true
cron.workspace = true
sha2.workspace = true
signal-hook.workspace = true
atomic-write-file.workspace = true

[dev-dependencies]
tempfile.workspace = true
serial_test = "3"
nix = { workspace = true, features = ["signal", "process"] }
