[package]
name = "dispatch"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for building, verifying, and running Dispatch agent parcels."
readme = "../../README.md"
keywords = ["agents", "cli", "packaging", "dispatch"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
dispatch-core = { path = "../dispatch-core" }
dispatch-process = { path = "../dispatch-process" }
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
jsonschema.workspace = true
chrono.workspace = true
cron.workspace = true
sha2.workspace = true
signal-hook.workspace = true
atomic-write-file.workspace = true
tiny_http.workspace = true
url.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["process"] }

[dev-dependencies]
tempfile.workspace = true
serial_test = "3"
