[package]
name = "dispatch-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core parser, manifest, builder, depot, and courier contracts for Dispatch agent parcels."
readme = "../../README.md"
keywords = ["agents", "packaging", "courier", "dispatch"]
categories = ["development-tools"]

[dependencies]
dispatch-wasm-abi = { path = "../dispatch-wasm-abi" }
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
ureq.workspace = true
walkdir.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
ring.workspace = true
jsonschema.workspace = true
rusqlite.workspace = true
tar.workspace = true
urlencoding.workspace = true
serde_yaml.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
