[package]
name = "dispatch-deployment-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared deployment lifecycle plugin wire protocol for Dispatch."
readme = "../../README.md"
keywords = ["deployment", "plugin", "protocol", "dispatch"]
categories = ["development-tools"]

[dependencies]
dispatch-plugin-rpc = { path = "../dispatch-plugin-rpc" }
serde.workspace = true
serde_json.workspace = true
