[package]
name = "dispatch-plugin-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared JSON-RPC 2.0 envelope types for Dispatch plugin protocols."
readme = "../../README.md"
keywords = ["agents", "json-rpc", "plugin", "protocol", "dispatch"]
categories = ["development-tools"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
